syntax = "proto3";

package user;

option go_package = "github.com/edwinjordan/golang_microservices/services/user/pkg/pb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message ValidateUserRequest {
  string user_id = 1;
}

message ValidateUserResponse {
  bool valid = 1;
  string name = 2;
}
